# ntfy_lite

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  readme.md
.github/workflows/: mkdocs.yaml  pypi_publish.yml  python_flake8.yml  python_mypy.yml  tests.yaml
demos/: ntfy_logging.py  ntfy_push.py
docs/: index.md  installation.md  limitation.md  readme.txt  references.md  usage.md
installation/: index.html
limitation/: index.html
ntfy_lite/: __init__.py  actions.py  defaults.py  demo_logging.py  demo_push.py  error.py  handler.py  ntfy.py  ntfy2logging.py  utils.py  version.py
references/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_foo.py  test_ntfy_lite.py
usage/: index.html
