[tool.poetry]
name = "ntfy_lite"
version = "1.0.0"
description = "minimalistic python API for sending ntfy notifications"
authors = [
	"Vincent Berenz <vberenz@tuebingen.mpg.de>",
]
packages = [
	 { include = "ntfy_lite" },
] 

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28.1"
pytest = "^7.1.3"
validators = "^0.20.0"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
