[tool.poetry]
name = "ntfy_lite"
version = "1.0.0"
description = "minimalistic python API for sending ntfy notifications"
authors = [
	"Vincent Berenz <vberenz@tuebingen.mpg.de>",
]
maintainers = [
	"Vincent Berenz <vberenz@tuebingen.mpg.de>",
]
packages = [
	 { include = "ntfy_lite" },
] 
license = "BSD-3-Clause"
readme = "readme.md"
homepage = "https://github.com/MPI-IS/ntfy_lite"
repository = "https://github.com/MPI-IS/ntfy_lite"

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28.1"
pytest = "^7.1.3"
validators = "^0.20.0"
types-requests = "^2.28.11.2"

[[tool.poetry.source]]
name = "github"
url = "https://github.com/MPI-IS/ntfy_lite"
default = false
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
